[package]
name = "pubsub-plugin"
version = "1.9.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio-nsq = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.15"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "sync", "time"] }
bytes = { version = "1.1", features = ["serde"] }

solana-logger = "=1.8.4"
solana-accountsdb-plugin-interface = "=1.8.4"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


