[package]
name = "ws-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-actors = "4.0.0-beta.7"
actix = "0.12"
actix-web = "4.0.0-beta.11"
serde = "1.0"
serde_json = "1.0"
zstd = "0.9"
bs58 = "0.4"
base64 = "0.13"
futures = "0.3"
tokio-nsq = "0.12"
structopt = "0.3"
num_cpus = "1.13"
bytes = { version = "1", features = ["serde"] }
rmp-serde = "0.15"
prometheus = "0.13"
tracing = "0.1"
lazy_static = "1.4"

